--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "test": "cmd"
     },
     "dependencies": {
+        "blog-quality-project": "file:",
         "ejs": "^3.1.10",
         "express": "^4.21.2"
     },
