--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
     "singleQuote": false,
     "trailingComma": "none",
     "printWidth": 180,
-    "endOfLine": "lf",
-    "formatOnSave": true
+    "endOfLine": "lf"
 }
