--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "husky": "^9.1.7",
         "nodemon": "^3.1.9",
         "prettier": "^3.5.1",
+        "autocannon": "^8.0.0",
         "typescript": "^5.2.2"
     },
     "husky": {
