--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "start": "node dist/index.js",
-        "dev": "nodemon src/index.ts",
+        "dev": "nodemon --exec \"tsx src/index.ts\"",
         "format": "prettier --write \"src/**/*.{ts,tsx,json}\"",
         "format:check": "prettier --check \"src/**/*.{ts,tsx,json}\"",
         "lint": "eslint src/**/*.{ts,tsx}",
@@ -24,8 +24,7 @@
         "ejs": "^3.1.10",
         "express": "^4.21.2",
         "source-map-loader": "^5.0.0",
-        "ts-loader": "^9.5.2",
-        "ts-node": "^10.9.2"
+        "ts-loader": "^9.5.2"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.7.1",
@@ -38,7 +37,9 @@
         "husky": "^9.1.7",
         "nodemon": "^3.1.9",
         "prettier": "3.5.1",
-        "typescript": "^5.2.2",
+        "ts-node": "^10.9.2",
+        "tsx": "^4.19.3",
+        "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.1"
     },
     "husky": {
